Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -521,6 +521,8 @@ Error message and password prompt
 
 <li>From collector to creator</li>
 
+<li>Roam Research</li>
+
 <li>Sticking to TiddlyWiki</li>
 
 <li>TiddlyBlink</li>
@@ -12355,7 +12357,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200622073810623" creator="debby" list="[[Sticking to TiddlyWiki]] $:/core/ui/SideBar/Recent [[Bob Dylan - Rough and Rowdy Ways]]" modified="20200622100835180" modifier="debby" title="$:/StoryList">
+<div created="20200622073810623" creator="debby" list="[[Sticking to TiddlyWiki]] [[Roam Research]]" modified="20200622100939433" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13533,6 +13535,9 @@ In order to follow the principle of never creating notes in isolation, here's a 
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
+</div>
+<div created="20200622100951760" creator="debby" modified="20200622101039568" modifier="debby" tags="Note-taking" title="Roam Research">
+<pre>With bi-directional links, transclusion, and other cool features, Roam Research has gathered a large following on Twitter even before its official release.</pre>
 </div>
 <div created="20200622100446090" creator="debby" modified="20200622100929339" modifier="debby" tags="Note-taking" title="Sticking to TiddlyWiki">
 <pre>The temptation to use [[Roam Research]] is strong despite the offending price tag. Removing the necessity to categorize your notes is a great cognitive relief, it seems. This [[article|https://blog.fkynjyq.com/what-i-want-to-say-before-pay-for-roam-research/]] explains it very well.
