--- a/index.html
+++ b/index.html
@@ -257,8 +257,6 @@ Error message and password prompt
 
 <li>$:/state/showeditpreview</li>
 
-<li>$:/state/ShowPaletteEditor</li>
-
 <li>$:/state/tab--1190666861</li>
 
 <li>$:/state/tab--152518593</li>
@@ -270,8 +268,6 @@ Error message and password prompt
 <li>$:/state/tab--86143343</li>
 
 <li>$:/state/tab--959111941</li>
-
-<li>$:/state/tab-1272344022</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -497,13 +493,9 @@ Error message and password prompt
 
 <li>$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary</li>
 
-<li>$:/temp/search</li>
-
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
 <li>$:/temp/tobibeer/preview-1-tiddler</li>
-
-<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -521,15 +513,13 @@ Error message and password prompt
 
 <li>From collector to creator</li>
 
-<li>Roam Research</li>
-
-<li>Sticking to TiddlyWiki</li>
-
 <li>TiddlyBlink</li>
 
 <li>TiddlyBlink home</li>
 
 <li>Welcome!</li>
+
+<li>李元佳</li>
 
 </ul>
 </p>
@@ -10485,8 +10475,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20200228210954683" creator="debby" modified="20200622100048040" modifier="debby" tags="tb" title="$:/palette">
-<pre>$:/palettes/TiddlyBlink</pre>
+<div created="20200228210954683" creator="debby" modified="20200622035648081" modifier="debby" tags="tb" title="$:/palette">
+<pre>$:/palettes/SolarFlare</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -12318,16 +12308,13 @@ exports.context = contextWidget;
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
-<div created="20200622100054480" creator="debby" modified="20200622100054480" modifier="debby" title="$:/state/ShowPaletteEditor">
-<pre>yes</pre>
-</div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
 <div created="20200618095532887" creator="debby" modified="20200618095536451" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200622095939652" modifier="debby" title="$:/state/tab--1963855381">
+<div created="20200618012853212" creator="debby" modified="20200619033035322" modifier="debby" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200619015940443" modifier="debby" title="$:/state/tab--2112689675">
@@ -12339,10 +12326,7 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200622100717300" creator="debby" modified="20200622100717300" modifier="debby" title="$:/state/tab-1272344022">
-<pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
-</div>
-<div created="20200527074318200" creator="debby" modified="20200622095908313" modifier="debby" title="$:/state/tab-1749438307">
+<div created="20200527074318200" creator="debby" modified="20200619033031910" modifier="debby" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
@@ -12357,7 +12341,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200622073810623" creator="debby" list="[[Sticking to TiddlyWiki]] [[Roam Research]]" modified="20200622100939433" modifier="debby" title="$:/StoryList">
+<div created="20200622133821135" creator="debby" list="李元佳 $:/core/ui/MoreSideBar/All Welcome!" modified="20200622133922659" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13383,17 +13367,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
-<div created="20200622073705273" creator="debby" modified="20200622073714376" modifier="debby" title="$:/temp/search">
-<pre></pre>
-</div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200622100834729" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Draft of 'New Tiddler' by debby</pre>
-</div>
-<div created="20200622095932541" creator="debby" modified="20200622095938501" modifier="debby" title="$:/theme">
-<pre>$:/themes/tiddlywiki/vanilla</pre>
+<div created="20200618014049220" creator="debby" modified="20200622133915050" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>2020-06-18</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13536,14 +13514,6 @@ In order to follow the principle of never creating notes in isolation, here's a 
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
 </div>
-<div created="20200622100951760" creator="debby" modified="20200622101039568" modifier="debby" tags="Note-taking" title="Roam Research">
-<pre>With bi-directional links, transclusion, and other cool features, Roam Research has gathered a large following on Twitter even before its official release.</pre>
-</div>
-<div created="20200622100446090" creator="debby" modified="20200622100929339" modifier="debby" tags="Note-taking" title="Sticking to TiddlyWiki">
-<pre>The temptation to use [[Roam Research]] is strong despite the offending price tag. Removing the necessity to categorize your notes is a great cognitive relief, it seems. This [[article|https://blog.fkynjyq.com/what-i-want-to-say-before-pay-for-roam-research/]] explains it very well.
-
-However, I hate to host my content on yet another third-party server. I will try to stick to TiddlyWiki even though I'm not a fan of the UI.</pre>
-</div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
 
@@ -13572,6 +13542,9 @@ Below each tiddler (note card) is a list of links to any other tiddlers that lin
 This is my attempt to switch [[from a collector to a creator|From collector to creator]].
 
 I will give further directions as content accumulates on this site.</pre>
+</div>
+<div created="20200622134018704" creator="debby" modified="20200622134313029" modifier="debby" tags="Art Taiwan" title="李元佳">
+<pre>__藝術家李元佳（1929-1994）為臺灣抽象畫、觀念藝術的前衛開拓者之一，於二次大戰後隨國民政府自廣西遷臺，輾轉於臺北接受師範體系美術教育訓練，並投入現代藝術啟蒙者李仲生門下，對於藝術的生成、本質之思考，有了突破性發展。他在創作上積極脫離傳統束縛、開創新的藝術形式，六O年即以新銳之姿，與「東方畫會」共同開展了臺灣現代美術運動的新頁。他曾在歐陸藝壇蓬勃發展，卻受限早期資訊封閉，知名度未能擴及臺灣，但創作範圍包括水墨、油彩、單色繪畫、甚至觀念藝術、攝影、複合媒材，並以行動擴延藝術的定義，是少數在國際藝壇發光發熱，然非臺灣人所熟悉的藝術家。__ — via [觀‧點 - 李元佳回顧展 | 臺北市立美術館](https://www.tfam.museum/Exhibition/Exhibition_page.aspx?id=498&amp;ddlLang=zh-tw) [[+Roam]]</pre>
 </div>
 
 
