Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12341,7 +12341,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200622133821135" creator="debby" list="李元佳 $:/core/ui/MoreSideBar/All Welcome!" modified="20200622133922659" modifier="debby" title="$:/StoryList">
+<div created="20200622133821135" creator="debby" list="$:/core/ui/SideBar/Recent 李元佳" modified="20200622134522301" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13370,8 +13370,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200622134406834" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>.sourcesList</pre>
+<div created="20200618014049220" creator="debby" modified="20200622134522147" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>李元佳</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
@@ -13543,8 +13543,8 @@ This is my attempt to switch [[from a collector to a creator|From collector to c
 
 I will give further directions as content accumulates on this site.</pre>
 </div>
-<div created="20200622134018704" creator="debby" modified="20200622134433590" modifier="debby" tags="Art Taiwan" title="李元佳">
-<pre>藝術家李元佳（1929-1994）為臺灣抽象畫、觀念藝術的前衛開拓者之一，於二次大戰後隨國民政府自廣西遷臺，輾轉於臺北接受師範體系美術教育訓練，並投入現代藝術啟蒙者李仲生門下，對於藝術的生成、本質之思考，有了突破性發展。他在創作上積極脫離傳統束縛、開創新的藝術形式，六O年即以新銳之姿，與「東方畫會」共同開展了臺灣現代美術運動的新頁。他曾在歐陸藝壇蓬勃發展，卻受限早期資訊封閉，知名度未能擴及臺灣，但創作範圍包括水墨、油彩、單色繪畫、甚至觀念藝術、攝影、複合媒材，並以行動擴延藝術的定義，是少數在國際藝壇發光發熱，然非臺灣人所熟悉的藝術家。 — via [[觀‧點 - 李元佳回顧展 - 臺北市立美術館 | https://www.tfam.museum/Exhibition/Exhibition_page.aspx?id=498&amp;ddlLang=zh-tw]]</pre>
+<div created="20200622134018704" creator="debby" modified="20200622134537989" modifier="debby" tags="Art Taiwan" title="李元佳">
+<pre>藝術家李元佳（1929-1994）為臺灣抽象畫、觀念藝術的前衛開拓者之一，於二次大戰後隨國民政府自廣西遷臺，輾轉於臺北接受師範體系美術教育訓練，並投入現代藝術啟蒙者李仲生門下，對於藝術的生成、本質之思考，有了突破性發展。他在創作上積極脫離傳統束縛、開創新的藝術形式，六O年即以新銳之姿，與「東方畫會」共同開展了臺灣現代美術運動的新頁。他曾在歐陸藝壇蓬勃發展，卻受限早期資訊封閉，知名度未能擴及臺灣，但創作範圍包括水墨、油彩、單色繪畫、甚至觀念藝術、攝影、複合媒材，並以行動擴延藝術的定義，是少數在國際藝壇發光發熱，然非臺灣人所熟悉的藝術家。 — via [[觀‧點 - 李元佳回顧展 - 臺北市立美術館|https://www.tfam.museum/Exhibition/Exhibition_page.aspx?id=498&amp;ddlLang=zh-tw]]</pre>
 </div>
 
 
