--- a/index.html
+++ b/index.html
@@ -231,6 +231,10 @@ Error message and password prompt
 
 <li>$:/plugins/rmnvsl/krystal</li>
 
+<li>$:/plugins/rmnvsl/krystal/config/close</li>
+
+<li>$:/plugins/rmnvsl/krystal/config/highlight</li>
+
 <li>$:/plugins/sk/WhiteList</li>
 
 <li>$:/plugins/snowgoon88/edit-comptext</li>
@@ -274,6 +278,8 @@ Error message and password prompt
 <li>$:/state/tab-2065006209</li>
 
 <li>$:/state/tab/moresidebar-1645249547</li>
+
+<li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
@@ -496,6 +502,8 @@ Error message and password prompt
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
 <li>$:/temp/tobibeer/preview-1-tiddler</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -10475,8 +10483,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20200228210954683" creator="debby" modified="20200622035648081" modifier="debby" tags="tb" title="$:/palette">
-<pre>$:/palettes/SolarFlare</pre>
+<div created="20200228210954683" creator="debby" modified="20200722080210639" modifier="debby" tags="tb" title="$:/palette">
+<pre>$:/palettes/TiddlyBlink</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
 <pre>alert-background: #ffe476
@@ -11771,6 +11779,12 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
+<div created="20200722080339252" creator="debby" modified="20200722080339252" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
+<pre>enable</pre>
+</div>
+<div created="20200722080340752" creator="debby" modified="20200722080340752" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/highlight">
+<pre>enable</pre>
+</div>
 <div author="Stephen Kimmel" created="20200304200251053" description="White List" modified="20200304200252195" plugin-type="plugin" tags="tb" title="$:/plugins/sk/WhiteList" type="application/json" version="0.0.3">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -12314,11 +12328,11 @@ exports.context = contextWidget;
 <div created="20200618095532887" creator="debby" modified="20200618095536451" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200619033035322" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200618012853212" creator="debby" modified="20200722080334939" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/plugins/rmnvsl/krystal/settings</pre>
 </div>
-<div created="20200527074355500" creator="debby" modified="20200619015940443" modifier="debby" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<div created="20200527074355500" creator="debby" modified="20200722080348179" modifier="debby" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
 <div created="20200618015239429" creator="debby" modified="20200619015852995" modifier="debby" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
@@ -12326,8 +12340,8 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200619033031910" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200527074318200" creator="debby" modified="20200722080346007" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12335,13 +12349,16 @@ exports.context = contextWidget;
 <div created="20200618095525979" creator="debby" modified="20200618095537575" modifier="debby" title="$:/state/tab/moresidebar-1645249547">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
+<div created="20200722080248707" creator="debby" modified="20200722080251423" modifier="debby" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
+</div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200722075730990" creator="debby" list="$:/ControlPanel Welcome!" modified="20200722075744382" modifier="debby" title="$:/StoryList">
+<div created="20200722080111820" creator="debby" list="Welcome!" modified="20200722080111820" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13370,8 +13387,11 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200722075732902" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>李元佳</pre>
+<div created="20200618014049220" creator="debby" modified="20200722080352496" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
+</div>
+<div created="20200722080223183" creator="debby" modified="20200722080229519" modifier="debby" title="$:/theme">
+<pre>$:/themes/tiddlywiki/snowwhite</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.22">
 <pre>{
