Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@ Error message and password prompt
 
 <li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown</li>
 
+<li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown--436478829</li>
+
 <li>$:/state/showeditpreview</li>
 
 <li>$:/state/tab--1190666861</li>
@@ -12321,6 +12323,9 @@ exports.context = contextWidget;
 <div created="20200619015624004" creator="debby" modified="20200619015631603" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown">
 <pre>yes</pre>
 </div>
+<div created="20200722080910683" creator="debby" modified="20200722080940458" modifier="debby" title="$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown--436478829">
+<pre>usage</pre>
+</div>
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
@@ -12336,14 +12341,14 @@ exports.context = contextWidget;
 <div created="20200527074355500" creator="debby" modified="20200722080348179" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200618015239429" creator="debby" modified="20200619015852995" modifier="debby" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
+<div created="20200618015239429" creator="debby" modified="20200722080903100" modifier="debby" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200722080346007" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" creator="debby" modified="20200722080900031" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -12360,7 +12365,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200722080111820" creator="debby" list="Markdown Welcome!" modified="20200722080550007" modifier="debby" title="$:/StoryList">
+<div created="20200722080111820" creator="debby" list="$:/core/ui/SideBar/Recent Markdown" modified="20200722081007941" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12433,7 +12438,7 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200618015454770" creator="debby" modified="20200619021653654" modifier="debby" title="$:/temp/NewTagName">
+<div created="20200618015454770" creator="debby" modified="20200722080756427" modifier="debby" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200618014535688" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200618014535688" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -13389,8 +13394,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200722080550429" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200722081012154" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Doves - Carousels</pre>
 </div>
 <div created="20200722080223183" creator="debby" modified="20200722080229519" modifier="debby" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -13536,8 +13541,8 @@ In order to follow the principle of never creating notes in isolation, here's a 
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
 </div>
-<div created="20200722080724531" creator="debby" modified="20200722080750743" modifier="debby" tags="" title="Markdown" type="text/x-markdown">
-<pre>[[From a collector to a creator]]</pre>
+<div created="20200722080941913" creator="debby" modified="20200722081030307" modifier="debby" tags="" title="Markdown" type="text/x-markdown">
+<pre>[link text](#李元佳)</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
