--- a/index.html
+++ b/index.html
@@ -501,9 +501,13 @@ Error message and password prompt
 
 <li>$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary</li>
 
+<li>$:/temp/search</li>
+
 <li>$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html</li>
 
 <li>$:/temp/tobibeer/preview-1-tiddler</li>
+
+<li>$:/temp/tobibeer/preview-2-tiddler</li>
 
 <li>$:/theme</li>
 
@@ -522,8 +526,6 @@ Error message and password prompt
 <li>Doves - Carousels</li>
 
 <li>From collector to creator</li>
-
-<li>Markdown</li>
 
 <li>TiddlyBlink</li>
 
@@ -12365,7 +12367,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200722080111820" creator="debby" list="$:/core/ui/SideBar/Recent Markdown" modified="20200722081007941" modifier="debby" title="$:/StoryList">
+<div created="20200722080111820" creator="debby" list="李元佳" modified="20200722081145248" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13391,11 +13393,17 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
+<div created="20200722081132988" creator="debby" modified="20200722081142753" modifier="debby" title="$:/temp/search">
+<pre>李元佳</pre>
+</div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200722081012154" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Doves - Carousels</pre>
+<div created="20200618014049220" creator="debby" modified="20200722081032347" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>李元佳</pre>
+</div>
+<div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
+<pre>李元佳</pre>
 </div>
 <div created="20200722080223183" creator="debby" modified="20200722080229519" modifier="debby" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -13540,9 +13548,6 @@ In order to follow the principle of never creating notes in isolation, here's a 
 - **Create.** Write original article.
 
 — via [From collector to creator • Mental Nodes](https://www.mentalnodes.com/from-collector-to-creator) </pre>
-</div>
-<div created="20200722080941913" creator="debby" modified="20200722081030307" modifier="debby" tags="" title="Markdown" type="text/x-markdown">
-<pre>[link text](#李元佳)</pre>
 </div>
 <div created="20200125152105770" modified="20200304194714120" tags=".sidebyside tb meta" title="TiddlyBlink">
 <pre>Welcome to TiddlyBlink! ~TiddlyBlink is an adaptation of TiddlyWiki with the goal of helping you see connections between your ideas, and move quickly from one idea to another. It was inspired by the bi-directional linking found in Roam (https://roamresearch.com/), but built with capabilities already available in ~TiddlyWiki (https://tiddlywiki.com). See my example file [ext[here|https://giffmex.org/gifts/tiddlyblinkexample.html]].&lt;br&gt;&lt;br&gt;
