Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -12349,11 +12349,11 @@ exports.context = contextWidget;
 <div created="20200527074400500" creator="debby" modified="20200619015937000" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200722080900031" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200527074318200" creator="debby" modified="20200722090616569" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20200618012538037" modified="20200618013407319" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200618012538037" creator="debby" modified="20200722090614110" modifier="debby" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200618095525979" creator="debby" modified="20200618095537575" modifier="debby" title="$:/state/tab/moresidebar-1645249547">
 <pre>$:/core/ui/MoreSideBar/All</pre>
@@ -12367,7 +12367,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200722080111820" creator="debby" list="李元佳" modified="20200722081145248" modifier="debby" title="$:/StoryList">
+<div created="20200722090139433" creator="debby" list="Welcome!" modified="20200722090559741" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -12427,15 +12427,15 @@ exports.context = contextWidget;
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1280&quot;
+            &quot;text&quot;: &quot;768&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;720&quot;
+            &quot;text&quot;: &quot;1024&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
-            &quot;text&quot;: &quot;en-US&quot;
+            &quot;text&quot;: &quot;en&quot;
         }
     }
 }</pre>
@@ -13393,8 +13393,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
-<div created="20200722081132988" creator="debby" modified="20200722081142753" modifier="debby" title="$:/temp/search">
-<pre>李元佳</pre>
+<div created="20200722081132988" creator="debby" modified="20200722090137846" modifier="debby" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
