--- a/index.html
+++ b/index.html
@@ -187,17 +187,37 @@ Error message and password prompt
 
 <li>$:/config/NewJournal/Title</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/.giffmex/buttons/newnote-datetime</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/themes/jd/Mono/Buttons/searchbar</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/themes/jd/Mono/Buttons/switch-palette</li>
+
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown</li>
+
+<li>$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla</li>
 
 <li>$:/config/RelinkOnRename</li>
 
@@ -284,6 +304,8 @@ Error message and password prompt
 <li>$:/state/plugin-info-896098052-$:/plugins/tiddlywiki/markdown--436478829</li>
 
 <li>$:/state/showeditpreview</li>
+
+<li>$:/state/sidebar</li>
 
 <li>$:/state/tab--1190666861</li>
 
@@ -1048,14 +1070,29 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20191225174624729" modified="20200304195553439" tags="tb" title="$:/config/NewJournal/Title">
 <pre>YYYY-0MM / 0DD / 0hh:0mm:0ss /</pre>
 </div>
+<div created="20200728014854268" creator="debby" modified="20200728014854268" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/.giffmex/buttons/newnote-datetime">
+<pre>hide</pre>
+</div>
+<div created="20200728014856221" creator="debby" modified="20200728014856221" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
+<pre>hide</pre>
+</div>
 <div created="20200722133855585" creator="debby" modified="20200722134447853" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/encryption">
 <pre>hide</pre>
 </div>
-<div created="20200722134505572" creator="debby" modified="20200722134505572" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
+<div created="20200722134505572" creator="debby" modified="20200728015057362" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/export-page">
 <pre>show</pre>
 </div>
-<div created="20200722133819954" creator="debby" modified="20200722133819954" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<div created="20200728015048499" creator="debby" modified="20200728015048499" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/fold-all">
 <pre>show</pre>
+</div>
+<div created="20200722133819954" creator="debby" modified="20200728014852611" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>hide</pre>
+</div>
+<div created="20200728014850985" creator="debby" modified="20200728014850985" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
+<pre>hide</pre>
+</div>
+<div created="20200728014900805" creator="debby" modified="20200728014900805" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki">
+<pre>hide</pre>
 </div>
 <div created="20200722133842427" creator="debby" modified="20200722133846530" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/storyview">
 <pre>hide</pre>
@@ -1063,8 +1100,23 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200722134511888" creator="debby" modified="20200722134529333" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme">
 <pre>hide</pre>
 </div>
+<div created="20200728015050383" creator="debby" modified="20200728015050383" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/unfold-all">
+<pre>show</pre>
+</div>
+<div created="20200728014851624" creator="debby" modified="20200728014851624" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/plugins/tiddlywiki/markdown/new-markdown-button">
+<pre>hide</pre>
+</div>
+<div created="20200728014745202" creator="debby" modified="20200728014904258" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/themes/jd/Mono/Buttons/searchbar">
+<pre>show</pre>
+</div>
+<div created="20200728014733924" creator="debby" modified="20200728014733924" modifier="debby" title="$:/config/PageControlButtons/Visibility/$:/themes/jd/Mono/Buttons/switch-palette">
+<pre>hide</pre>
+</div>
 <div created="20200619015634167" creator="debby" modified="20200619015707951" modifier="debby" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown">
 <pre>no</pre>
+</div>
+<div created="20200728015129356" creator="debby" modified="20200728015129356" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
+<pre>yes</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -10494,7 +10546,7 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 &lt;/$button&gt;
 &lt;/$navigator&gt;</pre>
 </div>
-<div created="20190202142805411" creator="jd" modified="20200728012802091" modifier="jd" title="$:/palette">
+<div created="20190202142805411" creator="jd" modified="20200728014829448" modifier="debby" title="$:/palette">
 <pre>$:/themes/jd/Mono/Palette/SpartanDay</pre>
 </div>
 <div created="20200222183545341" description="the opposite of TiddlyWiki's usual color scheme" modified="20200304200158934" name="TiddlyBlink" tags="tb $:/tags/Palette" title="$:/palettes/TiddlyBlink" type="application/x-tiddler-dictionary">
@@ -12351,29 +12403,32 @@ exports.context = contextWidget;
 <div created="20200618095006136" creator="debby" modified="20200619033242312" modifier="debby" title="$:/state/showeditpreview">
 <pre>no</pre>
 </div>
+<div created="20200728014814415" creator="debby" modified="20200728014823576" modifier="debby" title="$:/state/sidebar">
+<pre>no</pre>
+</div>
 <div created="20200618094158079" creator="debby" modified="20200618094206143" modifier="debby" title="$:/state/tab--1190666861">
 <pre>TiddlyBlink</pre>
 </div>
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728013327199" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200618012853212" creator="debby" modified="20200728014721424" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/core/ui/ControlPanel/Toolbars</pre>
 </div>
-<div created="20200527074355500" creator="debby" modified="20200722135107633" modifier="debby" title="$:/state/tab--2112689675">
+<div created="20200527074355500" creator="debby" modified="20200728014715072" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200618015239429" creator="debby" modified="20200722092029739" modifier="debby" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
+<div created="20200618015239429" creator="debby" modified="20200728014520693" modifier="debby" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20200527074400500" creator="debby" modified="20200722135101714" modifier="debby" title="$:/state/tab--959111941">
-<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
+<div created="20200527074400500" creator="debby" modified="20200728014635401" modifier="debby" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/EditorTypes</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728013329071" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200527074318200" creator="debby" modified="20200728014944168" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/General</pre>
+<div created="20200618012538037" creator="debby" modified="20200728014553883" modifier="debby" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200618095525979" creator="debby" modified="20200722135209921" modifier="debby" title="$:/state/tab/moresidebar-1645249547">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
@@ -12387,7 +12442,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728013306564" creator="debby" list="$:/Import $:/ControlPanel Welcome!" modified="20200728013306564" modifier="debby" title="$:/StoryList">
+<div created="20200728014821556" creator="debby" list="" modified="20200728015118661" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13413,14 +13468,14 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618014537337" modified="20200618015654593" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>highlight</pre>
 </div>
-<div created="20200722081132988" creator="debby" modified="20200722090137846" modifier="debby" title="$:/temp/search">
+<div created="20200722081132988" creator="debby" modified="20200728014702461" modifier="debby" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200722134409034" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>2020-07-22</pre>
+<div created="20200618014049220" creator="debby" modified="20200728014821996" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>From collector to creator</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
