Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@ Error message and password prompt
 
 <li>$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown</li>
 
+<li>$:/config/Plugins/Disabled/$:/themes/jd/Mono</li>
+
+<li>$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla</li>
+
 <li>$:/config/RelinkOnRename</li>
 
 <li>$:/config/ViewToolbarButtons/Visibility/$:/.giffmex/ViewToolbar/viewrefscheckboxes</li>
@@ -272,6 +276,8 @@ Error message and password prompt
 <li>$:/sk/WhiteList</li>
 
 <li>$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154</li>
+
+<li>$:/state/plugin-info--270617185-$:/themes/jd/Mono</li>
 
 <li>$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite</li>
 
@@ -1077,6 +1083,12 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 </div>
 <div created="20200619015634167" creator="debby" modified="20200619015707951" modifier="debby" title="$:/config/Plugins/Disabled/$:/plugins/tiddlywiki/markdown">
 <pre>no</pre>
+</div>
+<div created="20200728015919374" creator="debby" modified="20200728015919374" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/jd/Mono">
+<pre>yes</pre>
+</div>
+<div created="20200728015926979" creator="debby" modified="20200728015926979" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
+<pre>yes</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -11802,8 +11814,8 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200722080339252" creator="debby" modified="20200722080339252" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
-<pre>enable</pre>
+<div created="20200722080339252" creator="debby" modified="20200728015720544" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/close">
+<pre>disable</pre>
 </div>
 <div created="20200722080340752" creator="debby" modified="20200722080340752" modifier="debby" title="$:/plugins/rmnvsl/krystal/config/highlight">
 <pre>enable</pre>
@@ -12339,6 +12351,9 @@ exports.context = contextWidget;
 <div created="20200527084422330" modified="20200527084422330" title="$:/state/plugin-info--2135486722-$:/plugins/tobibeer/preview---1090399154">
 <pre>config</pre>
 </div>
+<div created="20200728015904036" creator="debby" modified="20200728015904036" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/jd/Mono">
+<pre>yes</pre>
+</div>
 <div created="20200722092008809" creator="debby" modified="20200722092028508" modifier="debby" title="$:/state/plugin-info--270617185-$:/themes/tiddlywiki/snowwhite">
 <pre>no</pre>
 </div>
@@ -12369,20 +12384,20 @@ exports.context = contextWidget;
 <div created="20200618095532887" creator="debby" modified="20200722135218846" modifier="debby" title="$:/state/tab--152518593">
 <pre>$:/core/ui/MoreSideBar/Plugins/Theme</pre>
 </div>
-<div created="20200618012853212" creator="debby" modified="20200728015516652" modifier="debby" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20200618012853212" creator="debby" modified="20200728015859443" modifier="debby" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
 <div created="20200527074355500" creator="debby" modified="20200722135107633" modifier="debby" title="$:/state/tab--2112689675">
 <pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20200618015239429" creator="debby" modified="20200722092029739" modifier="debby" title="$:/state/tab--86143343">
-<pre>$:/core/ui/ControlPanel/Plugins/Installed/Languages</pre>
+<div created="20200618015239429" creator="debby" modified="20200728015902767" modifier="debby" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
 <div created="20200527074400500" creator="debby" modified="20200722135101714" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728015224744" modifier="debby" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Appearance</pre>
+<div created="20200527074318200" creator="debby" modified="20200728015901195" modifier="debby" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/General</pre>
@@ -12399,7 +12414,7 @@ exports.context = contextWidget;
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div created="20200728015936496" creator="debby" list="$:/ControlPanel Welcome!" modified="20200728015936496" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
@@ -13434,13 +13449,13 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200618015712003" modified="20200618015712003" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200618014049220" creator="debby" modified="20200728015154339" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>From collector to creator</pre>
+<div created="20200618014049220" creator="debby" modified="20200728015836689" modifier="debby" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>Doves - Carousels</pre>
 </div>
 <div created="20200722081145041" creator="debby" modified="20200722081149777" modifier="debby" title="$:/temp/tobibeer/preview-2-tiddler">
 <pre>李元佳</pre>
 </div>
-<div created="20190202142800922" creator="jd" modified="20200728015458215" modifier="debby" title="$:/theme">
+<div created="20190202142800922" creator="jd" modified="20200728015847995" modifier="debby" title="$:/theme">
 <pre>$:/themes/jd/Mono</pre>
 </div>
 <div author="JD" core-version="&gt;=5.1.19" created="20190202102252527" creator="jd" dependents="$:/themes/tiddlywiki/vanilla" description="For writing long texts" list="contents" modified="20190203163019606" modifier="jd" name="Mono" plugin-type="theme" source="http://j.d.mono.tiddlyspot.com" title="$:/themes/jd/Mono" type="application/json" version="1.0.32">
