Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -1184,8 +1184,8 @@ placeholder=&quot;$placeholder$&quot;/&gt;
 <div created="20200728022017838" creator="debby" modified="20200728022017838" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/snowwhite">
 <pre>yes</pre>
 </div>
-<div created="20200728015926979" creator="debby" modified="20200728022020474" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
-<pre>yes</pre>
+<div created="20200728015926979" creator="debby" modified="20200728022106490" modifier="debby" title="$:/config/Plugins/Disabled/$:/themes/tiddlywiki/vanilla">
+<pre>no</pre>
 </div>
 <div created="20200106214031452" modified="20200304195600676" tags="tb" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
@@ -12592,7 +12592,7 @@ html body.tc-body {
 <div created="20200527074400500" creator="debby" modified="20200722135101714" modifier="debby" title="$:/state/tab--959111941">
 <pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
 </div>
-<div created="20200527074318200" creator="debby" modified="20200728022008003" modifier="debby" title="$:/state/tab-1749438307">
+<div created="20200527074318200" creator="debby" modified="20200728022100603" modifier="debby" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
 <div created="20200618012538037" creator="debby" modified="20200722134041093" modifier="debby" title="$:/state/tab-2065006209">
@@ -12613,7 +12613,7 @@ html body.tc-body {
 <div created="20200618032706502" creator="ㄎ" modified="20200618032708843" modifier="debb" title="$:/status/UserName">
 <pre>debby</pre>
 </div>
-<div created="20200728021741226" creator="debby" list="$:/ControlPanel" modified="20200728021741226" modifier="debby" title="$:/StoryList">
+<div created="20200728022054397" creator="debby" list="$:/ControlPanel Welcome!" modified="20200728022054397" modifier="debby" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200127163609843" list="$:/jd/fullscreen-editor/EditButton $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200304200339220" tags="tb" title="$:/tags/EditToolbar">
